--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -55,19 +55,19 @@
                 <div>
                     <mat-form-field>
                         <mat-label style="color: white;">Vul hier uw code in</mat-label>
-                        <input style="color: white;" matInput placeholder="Ex. 1234" [(ngModel)]="code" formControlName="code">
+                        <input style="color: white;" matInput placeholder="Ex. 1234" formControlName="code">
                     </mat-form-field>
                     <control-messages [control]="findLeveringenForm.get('code')" class="errorMessage"></control-messages>
                 </div>
                 <div>
                     <mat-form-field>
                         <mat-label style="color: white;">Vul hier uw nummerplaat in</mat-label>
-                        <input style="color: white;" matInput placeholder="Ex. 1abc123" [(ngModel)]="nummerplaat" formControlName="nummerplaat">
+                        <input style="color: white;" matInput placeholder="Ex. 1abc123" formControlName="nummerplaat">
                     </mat-form-field>
                     <control-messages [control]="findLeveringenForm.get('nummerplaat')" class="errorMessage"></control-messages>
                 </div>
                 <br>
-                <button class="button" (click)="goTo(code, nummerplaat)" mat-raised-button color="white" type="submit">Zoek uw
+                <button class="button" (click)="goTo()" mat-raised-button color="white" type="submit">Zoek uw
           levering
           op</button>
             </form>
