--- a/src/app/planning-admin/planning/planning.component.html
+++ b/src/app/planning-admin/planning/planning.component.html
@@ -4,12 +4,12 @@
   <div>
     <mat-form-field appearance="fill">
         <mat-label>Sorteer op datum</mat-label>
-        <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+        <mat-date-range-input [formGroup]="range" [rangePicker]="pickerSpecial">
             <input matStartDate formControlName="start" placeholder="Start date">
-            <input matEndDate (dateChange)="getSchedulesByDateRange()" formControlName="end" placeholder="End date">
+            <input matEndDate (dateInput)="getSchedulesByDateRange()" formControlName="end" placeholder="End date">
         </mat-date-range-input>
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-date-range-picker #picker></mat-date-range-picker>
+        <mat-datepicker-toggle matSuffix [for]="pickerSpecial"></mat-datepicker-toggle>
+        <mat-date-range-picker #pickerSpecial></mat-date-range-picker>
 
         <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
         <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
