--- a/src/app/admin/schedules/schedules/schedules.component.html
+++ b/src/app/admin/schedules/schedules/schedules.component.html
@@ -1,116 +1,108 @@
 <h1>Planningen</h1>
 <div class="tableField">
-  <mat-card id="card">
-    <mat-form-field id="filter">
-      <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Planning" #input>
-    </mat-form-field>
+    <mat-card id="card">
+        <mat-form-field id="filter">
+            <mat-label>Filter</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Planning" #input>
+        </mat-form-field>
 
-    <div><button class="addButton" (click)="addSchedule()" mat-raised-button color="accent">VOEG TOE</button></div>
-    <div>
-      <mat-form-field appearance="fill">
-          <mat-label>Sorteer op datum</mat-label>
-          <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-              <input matStartDate formControlName="start" placeholder="Start date">
-              <input matEndDate (dateChange)="getSchedulesByDateRange()" formControlName="end" placeholder="End date">
-          </mat-date-range-input>
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-date-range-picker #picker></mat-date-range-picker>
+        <div><button class="addButton" (click)="addSchedule()" mat-raised-button color="accent">VOEG TOE</button></div>
+        <div>
+            <mat-form-field appearance="fill">
+                <mat-label>Sorteer op datum</mat-label>
+                <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+                    <input matStartDate formControlName="start" placeholder="Start date">
+                    <input matEndDate (dateChange)="getSchedulesByDateRange()" formControlName="end" placeholder="End date">
+                </mat-date-range-input>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-date-range-picker #picker></mat-date-range-picker>
 
-          <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-          <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
-      </mat-form-field>
-  </div>
-    <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
+                <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+                <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+            </mat-form-field>
+        </div>
+        <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
 
-        <!-- Datum Column -->
-        <ng-container matColumnDef="datum">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Datum </th>
-          <td mat-cell *matCellDef="let row"> {{row.datum | date:'dd/MM/yyyy'}} </td>
-        </ng-container>
+                <!-- Datum Column -->
+                <ng-container matColumnDef="datum">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Datum </th>
+                    <td mat-cell *matCellDef="let row"> {{row.datum | date:'dd/MM/yyyy @ HH:mm'}} </td>
+                </ng-container>
 
-        <!-- Opmerking Column -->
-        <ng-container matColumnDef="opmerking">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Opmerking </th>
-          <td mat-cell *matCellDef="let row"> {{row.opmerking}} </td>
-        </ng-container>
+                <!-- Opmerking Column -->
+                <ng-container matColumnDef="opmerking">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Opmerking </th>
+                    <td mat-cell *matCellDef="let row"> {{row.opmerking}} </td>
+                </ng-container>
 
-        <!-- Creator Column -->
-        <ng-container matColumnDef="creator">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Creator </th>
-          <td mat-cell *matCellDef="let row"> {{row.user.naam}} </td>
-        </ng-container>
+                <!-- Creator Column -->
+                <ng-container matColumnDef="creator">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Creator </th>
+                    <td mat-cell *matCellDef="let row"> {{row.user.naam}} </td>
+                </ng-container>
 
-        <!-- Delete bedrijf Column -->
-        <ng-container matColumnDef="deleteSchedule">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-          <td mat-cell *matCellDef="let row"> <button (click)="editSchedule(row.scheduleID)" class="EditButton"
-              mat-raised-button color="primary">BEWERK</button>
-            <button (click)="deleteSchedule(row.scheduleID)" mat-raised-button color="accent">VERWIJDER</button> </td>
-        </ng-container>
+                <!-- Delete bedrijf Column -->
+                <ng-container matColumnDef="deleteSchedule">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+                    <td mat-cell *matCellDef="let row"> <button (click)="editSchedule(row.scheduleID)" class="EditButton" mat-raised-button color="primary">BEWERK</button>
+                        <button (click)="deleteSchedule(row.scheduleID)" mat-raised-button color="accent">VERWIJDER</button> </td>
+                </ng-container>
 
-        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-        <ng-container matColumnDef="expandedDetail">
-          <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-            <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-              <h2>Leveringen voor {{element.datum |date:'dd/MM/yyyy'}} <button (click)="addLevering(element.scheduleID)"
-                  mat-raised-button color="accent">VOEG LEVERING TOE</button></h2>
-              <div *ngFor="let levering of leveringen">
-                <mat-card>
-                  <div>
-                    <div class="example-element-symbol">Omschrijving: {{levering.omschrijving}} </div>
-                    <div>Laadkade: {{levering.laadkade.nummer}} </div>
-                    <div> Leverancier: {{levering.leverancier.code}} ({{levering.leverancier.bedrijf.naam}}) </div>
-                  </div>
-                  <div id="align_end">
-                    <button (click)="editLevering(levering.leveringID, levering.scheduleID)" class="EditButton"
-                      mat-raised-button color="primary">BEWERK</button>
-                    <button (click)="deleteLevering(levering.leveringID)" mat-raised-button
-                      color="accent">VERWIJDER</button>
-                    <button (click)="viewProducts(levering.leveringID)" class="EditButton" *ngIf="producten == null" mat-stroked-button color="accent">BEKIJK
+                <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+                <ng-container matColumnDef="expandedDetail">
+                    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+                        <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                            <h2>Leveringen voor {{element.datum |date:'dd/MM/yyyy @ HH:mm'}} <button (click)="addLevering(element.scheduleID)" mat-raised-button color="accent">VOEG LEVERING TOE</button></h2>
+                            <div *ngFor="let levering of leveringen">
+                                <mat-card>
+                                    <div>
+                                        <div class="example-element-symbol">Omschrijving: {{levering.omschrijving}} </div>
+                                        <div>Laadkade: {{levering.laadkade.nummer}} </div>
+                                        <div> Leverancier: {{levering.leverancier.code}} ({{levering.leverancier.bedrijf.naam}}) </div>
+                                    </div>
+                                    <div id="align_end">
+                                        <button (click)="editLevering(levering.leveringID, levering.scheduleID)" class="EditButton" mat-raised-button color="primary">BEWERK</button>
+                                        <button (click)="deleteLevering(levering.leveringID)" mat-raised-button color="accent">VERWIJDER</button>
+                                        <button (click)="viewProducts(levering.leveringID)" class="EditButton" *ngIf="producten == null" mat-stroked-button color="accent">BEKIJK
                       PRODUCTEN</button>
-                    <button (click)="hideProducts()" class="EditButton" *ngIf="producten != null" mat-stroked-button color="accent">VERBERG
+                                        <button (click)="hideProducts()" class="EditButton" *ngIf="producten != null" mat-stroked-button color="accent">VERBERG
                       PRODUCTEN</button>
-                  </div>
-                  <div *ngIf="producten != null">
-                    <button (click)="addProduct(levering.leveringID)" class="addProductButton" mat-stroked-button color="accent">VOEG
+                                    </div>
+                                    <div *ngIf="producten != null">
+                                        <button (click)="addProduct(levering.leveringID)" class="addProductButton" mat-stroked-button color="accent">VOEG
                       PRODUCT TOE</button>
-                    <mat-card *ngFor="let product of producten">
-                      <div>
-                        <div>{{product.naam}}</div>
-                        <div>
-                          <button (click)="editProduct(product.productID, product.levering.scheduleID)"
-                            class="EditButton" mat-raised-button color="primary">BEWERK</button>
-                          <button (click)="deleteProduct(product.productID)" mat-raised-button
-                            color="accent">VERWIJDER</button>
+                                        <mat-card *ngFor="let product of producten">
+                                            <div>
+                                                <div>{{product.naam}}</div>
+                                                <div>
+                                                    <button (click)="editProduct(product.productID, product.levering.scheduleID)" class="EditButton" mat-raised-button color="primary">BEWERK</button>
+                                                    <button (click)="deleteProduct(product.productID)" mat-raised-button color="accent">VERWIJDER</button>
+                                                </div>
+                                            </div>
+                                        </mat-card>
+                                    </div>
+                                </mat-card>
+                            </div>
+                            <div class="example-element-description">
+                                {{element.description}}
+                            </div>
                         </div>
-                      </div>
-                    </mat-card>
-                  </div>
-                </mat-card>
-              </div>
-              <div class="example-element-description">
-                {{element.description}}
-              </div>
-            </div>
-          </td>
-        </ng-container>
+                    </td>
+                </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="example-element-row"
-          [class.example-expanded-row]="expandedElement === element"
-          (click)="expandedElement = expandedElement === element ? null : element; getLeveringenByScheduleID(element.scheduleID)">
-        </tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="example-element-row" [class.example-expanded-row]="expandedElement === element" (click)="expandedElement = expandedElement === element ? null : element; getLeveringenByScheduleID(element.scheduleID)">
+                </tr>
+                <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">Geen schedules gevonden met de filter "{{input.value}}"</td>
-        </tr>
-      </table>
+                <!-- Row shown when there is no matching data. -->
+                <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="4">Geen schedules gevonden met de filter "{{input.value}}"</td>
+                </tr>
+            </table>
 
-      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-    </div>
-  </mat-card>
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+        </div>
+    </mat-card>
 </div>
