--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,28 +7,29 @@
 }
 
 .mat-header-cell {
-  font-size: 15px;
-  padding-top: 18px;
+    font-size: 15px;
+    padding-top: 18px;
 }
 
-#footer{
-  font-size: 15px;
-  bottom:0px;
-  background-color: royalblue;
-  color: whitesmoke;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+#footer {
+    font-size: 15px;
+    position: absolute;
+    bottom: 0;
+    width: 98.4%;
+    background-color: royalblue;
+    color: whitesmoke;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-#socialmedia{
-  float: right;
+#socialmedia {
+    float: right;
 }
 
-#twitter{
-  text-decoration: none;
-  color:whitesmoke;
+#twitter {
+    text-decoration: none;
+    color: whitesmoke;
 }
 
-#twitter:hover{
-  text-decoration: underline;
+#twitter:hover {
+    text-decoration: underline;
 }
-
