--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,33 +1,21 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
-
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 @include mat-core();
-
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $application-frontend-primary: mat-palette($mat-indigo, A100);
 $application-frontend-accent: mat-palette($mat-indigo, A200);
-
 // The warn palette is optional (defaults to red).
 $application-frontend-warn: mat-palette($mat-red);
-
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$application-frontend-theme: mat-light-theme((
-  color: (
-    primary: $application-frontend-primary,
-    accent: $application-frontend-accent,
-    warn: $application-frontend-warn,
-  )
-));
-
+$application-frontend-theme: mat-light-theme(( color: ( primary: $application-frontend-primary, accent: $application-frontend-accent, warn: $application-frontend-warn, )));
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
@@ -35,5 +23,12 @@ $application-frontend-theme: mat-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
