--- a/src/app/user/home/home.component.scss
+++ b/src/app/user/home/home.component.scss
@@ -11,7 +11,7 @@
     width: 75%;
 }
 
-#card {
+.card {
     height: 250px;
     margin: 20px;
 }
@@ -20,12 +20,18 @@
     color: #536dfe;
 }
 
-.mat-expansion-panel-header-description {
-    display: flex;
-    justify-content: flex-end;
-}
-
 .errorMessage {
     color: white;
     text-align: left;
+}
+
+.formfield {
+    width: 32vw;
+    max-width: 700px;
+    margin-bottom: -10px;
+    padding-right: 12vw;
+}
+
+.form {
+    width: max-content;
 }
