--- a/src/app/admin/schedules/schedules/schedules.component.html
+++ b/src/app/admin/schedules/schedules/schedules.component.html
@@ -53,7 +53,8 @@
                 <ng-container matColumnDef="expandedDetail">
                     <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
                         <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                            <h2>Leveringen voor {{element.datum |date:'dd/MM/yyyy @ HH:mm'}} <button (click)="addLevering(element.scheduleID)" mat-raised-button color="accent">VOEG LEVERING TOE</button></h2>
+                            <h2>Leveringen voor {{element.datum |date:'dd/MM/yyyy @ HH:mm'}} <button (click)="addLevering(element.scheduleID)" mat-raised-button color="accent">VOEG LEVERING TOE</button>
+                            </h2>
                             <div *ngFor="let levering of leveringen">
                                 <mat-card>
                                     <div>
@@ -72,15 +73,17 @@
                                     <div *ngIf="producten != null">
                                         <button (click)="addProduct(levering.leveringID)" class="addProductButton" mat-stroked-button color="accent">VOEG
                       PRODUCT TOE</button>
-                                        <mat-card *ngFor="let product of producten">
-                                            <div>
-                                                <div>{{product.naam}}</div>
+                                        <div *ngFor="let product of producten">
+                                            <mat-card *ngIf="product.leveringID == levering.leveringID">
                                                 <div>
-                                                    <button (click)="editProduct(product.productID, product.levering.scheduleID)" class="EditButton" mat-raised-button color="primary">BEWERK</button>
-                                                    <button (click)="deleteProduct(product.productID)" mat-raised-button color="accent">VERWIJDER</button>
+                                                    <div>{{product.naam}}</div>
+                                                    <div>
+                                                        <button (click)="editProduct(product.productID, product.levering.scheduleID)" class="EditButton" mat-raised-button color="primary">BEWERK</button>
+                                                        <button (click)="deleteProduct(product.productID)" mat-raised-button color="accent">VERWIJDER</button>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        </mat-card>
+                                            </mat-card>
+                                        </div>
                                     </div>
                                 </mat-card>
                             </div>
